name:                metronome
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/jship/metronome#readme
license:             BSD3
license-file:        LICENSE
author:              Jason Shipman
maintainer:          jasonpshipman@gmail.com
copyright:           Copyright (C) 2015 Jason Shipman
category:            FRP
build-type:          Simple
cabal-version:       >=1.10
data-dir:            sounds
data-files:          downbeat.wav, otherbeat.wav

executable metronome
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_metronome
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , netwire
                     , sdl2
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jship/metronome
